chamber/styles/small.css
@media (max-width: 500px) {
    #sacci img {
        position: absolute;
        z-index: 999;
        top: 0;
        left: 0;
        margin: 13px 0 0 15px;
        width: 45px;
    }
    body {
        background-color: white;
    }
    main {
        padding: 2px 0 0 0;
        background-color: #bfbfbf;;
    }
    .content {
        margin: 30px 5px;
    }
    .navigation {
        z-index: 998;
        width: 85%;
        padding-bottom: 50px;
        position: absolute;
    }
    .home {
        margin-top: 70px;
    }
    .navigation a {
        display: block;
        font-size: 2rem;
        width: 100%;
    }
    .navigation li {
        border-bottom: 1px solid black;
        font-size: 1.5rem;
        display: none;
        z-index: 999;
    }
    .navigation hr {
        display: none; 
    }
    
    .show hr {
        display: inline-block; 
        width: 100%;
    }
    #info {
        z-index: 1;
    }
    #menu button {
        z-index: 999;
        position: absolute;
        top: 0;
        right: 0;
        display: block;
    }
    #menu {
        display:block;
        font-size: 2rem;
        z-index: 999;
        position: absolute;
        top: 0;
        right: 0;
        border-radius: 25px;
        margin-top: 10px;
        margin-right: 7px;
        width: 90px;
        height: 60px;
        background-color: #002d5e;
        color: white;
    }
    #menu::before {
        content: "≡";
        font-weight: 600;
    }
    .show li {
        z-index: 999;
        display: block;
        text-align: right;
        padding: 30px;
    }
    #menu.show::before {
        content: 'X';
        font-family: "Gabarito", 'Arial';
        font-weight: lighter;
    }
    .hero {
        position: relative;
        text-align: center;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: auto auto;
        padding-bottom: 20px;
        background-color: white;
        border-radius: 20px;
    }
    .hero h2 {
        grid-row: 1;
        grid-column: 1/span 2;
        z-index: 2;
        color: white;
    }
    .hero h1 {
        grid-row: 2;
    }
    .hero .fill {
        display: none;
    }
    picture,
    #fallback {
        grid-column: 1/ span 2;
        grid-row: 1;
        position: relative;
        padding-bottom: 10px;
    }
    header {
        margin-top: 20%;
        margin-right: 2%;
        margin-left: 2%;
        font-family: 'Gabarito', 'Arial';
        border-radius: 20px;
        z-index: 2;
        background-color: #002d5edf;
        color: white;
        grid-column: 1/ span 2;
        font-size: 1rem;
        display: flex; 
        justify-content: center; 
        align-items: center;
        height: 50%; 
    }
    .join {
        grid-row: 2;
        padding: 20px 0;
    }
    .smaller {
        background-color: white;
        text-align: center;
        margin: 10px;
        border-radius: 20px;
        font-family: 'Montserrat', 'Arial';
    }
    .smaller h3 {
        padding: 10px;
    }
    .footer {
        width: 100%;
        bottom: 0;
        padding: 20px;
        margin: 0;
    }
    .mobile-controls {
        display: flex;
        align-items: center;
    }
    .fyi {
        font-family: 'Montserrat', 'Arial';
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        grid-template-rows: 1fr 0.5fr;
        padding-left: 20px;
    }
    .smaller {
        margin: 0;
        grid-column: 1/ span 4;
        grid-row: 1;
        background-color: white;
        text-align: center;
        border-radius: 20px;
    }
    .smaller p {
        text-align: center;
    }
    .weather {
        grid-column: 1/ span 2;
        grid-row: 2;
        margin: 0;
        border-radius: 20px;
    }
    .current {
        grid-column: 3/ span 4;
        grid-row: 2;
        height: 100%;
        border-radius: 20px;
    }
    .current h3 {
        padding-top: 10px;
    }
    .footer-content {
        padding-left: 50px;
    }
    .footer-logo {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr;
        grid-column: 1;
        grid-row: 1;
    }
    .contact-info {
        grid-column: 1;
        grid-row: 2;
    } 

    /* Discover Page */
    .discover {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: repeat(5, auto);
    }
    .sidebar {
        grid-column: 1;
        grid-row: 1;
    }
    .history {
        grid-column: 1;
        grid-row: 3;
    }
    .calendar {
        grid-row: 4;
        overflow-x: auto;
        max-width: 100%;
        padding: 10px;
    }
    .days-container {
        font-size: 1rem;
    }
    .rightbar {
        grid-column: 1; 
        grid-row: 5;
        display: grid;
        margin-bottom: 20px;
    }
    .rightbar img {
        grid-column: 1/ span 2;
    }
    .rightbar img:hover {
        transform: none;
    }

    /* Directory */

    .joinHeader {
        font-size: 1.5rem;
        margin-left: 10%;
        margin-right: 10%;
    }
    .toggle-buttons {
        margin: 0;
        margin-top: 50px;
    }
    .grid-view .member-card {
        margin: 0;
        width: 44%;
    }
    .list-view .member-card {
        width: 94%;
        border-radius: 10px;
    }
    .list-view img {
        width: 100%;
        border-radius: 20px;
    }
    #banner {
        margin: 0;
    }

    /* Dark mode switch */

    .gg-dark-mode {
        z-index: 999;
        position: fixed;
        cursor: pointer;
        right: 0;
        top: 0;
        margin-top: 15px;
        margin-right: 110px;
        box-sizing: border-box;
        border:3px solid black;
        border-radius:100px;
        width:50px;
        height:50px
    }
    .gg-dark-mode::after,
    .gg-dark-mode::before {
        content: "";
        box-sizing: border-box;
        position: absolute;
        display: block
    }
    .gg-dark-mode::before {
        border: 14px solid black;
        border-top-left-radius:100px;
        border-bottom-left-radius:100px;
        border-right: 0;
        width:25px;
        height:50px;
        top: -3px;
        left:-3px
    }
    .gg-dark-mode::after {
        border: 11px solid black;
        border-top-right-radius:100px;
        border-bottom-right-radius:100px;
        border-left: 0;
        width:12px;
        height:22px;
        right:10px;
        top:11px
    } 
} 

